Added license information
git-svn-id: http://svn.radical.com.pl/maven2/maven-remote-exec-plugin/trunk@2389 01953d5f-b815-0410-ab08-b360c6b68d4c

--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-	<repositories>
-	</repositories>
-	<pluginRepositories>
-	</pluginRepositories>
+	<licenses>
+	   <license>
+	       <name>LGPLv3</name>
+	       <url>http://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
+	       <distribution>repo</distribution>
+	   </license>
+	</licenses>
 
 	<distributionManagement>
 		<repository>
@@ -31,30 +34,35 @@
 		<system>Redmine</system>
 		<url>http://projekty.radical.com.pl/projects/maven-remote-exec/issues</url>
 	</issueManagement>
+	
 	<ciManagement>
 		<system>Hudson</system>
 	</ciManagement>
+	
+    <scm>
+        <connection>scm:git:git://github.com/uded/maven-remote-exec-plugin.git</connection>
+        <developerConnection>scm:svn:https://svn.radical.com.pl/maven2/maven-remote-exec-plugin/</developerConnection>
+        <tag>HEAD</tag>
+        <url>http://projekty.radical.com.pl/projects/maven-remote-exec/repository</url>
+    </scm>
+
+    <organization>
+        <name>Radical Creations</name>
+    </organization>
 	<developers>
 		<developer>
 			<id>uded</id>
 			<name>Łukasz Rżanek</name>
 			<email>lukasz.rzanek@radical.com.pl</email>
 			<organization>Radical Creations</organization>
-			<timezone>CET</timezone>
+			<timezone>+1</timezone>
 			<roles>
 				<role>project owner</role>
+				<role>developer</role>
 			</roles>
 		</developer>
 	</developers>
-	<scm>
-		<connection>scm:git:git://github.com/uded/maven-remote-exec-plugin.git</connection>
-		<developerConnection>scm:svn:https://svn.radical.com.pl/maven2/maven-remote-exec-plugin/</developerConnection>
-		<tag>HEAD</tag>
-		<url>http://projekty.radical.com.pl/projects/maven-remote-exec/repository</url>
-	</scm>
-	<organization>
-		<name>Radical Creations</name>
-	</organization>
+
 	<build>
 		<plugins>
 			<plugin>
