--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
 	</properties>
 
 	<licenses>
-	   <license>
-	       <name>LGPLv3</name>
-	       <url>http://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
-	       <distribution>repo</distribution>
-	   </license>
+		<license>
+			<name>LGPLv3</name>
+			<url>http://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
+			<distribution>repo</distribution>
+		</license>
 	</licenses>
 
 	<distributionManagement>
@@ -34,21 +34,21 @@
 		<system>Redmine</system>
 		<url>http://projekty.radical.com.pl/projects/maven-remote-exec/issues</url>
 	</issueManagement>
-	
+
 	<ciManagement>
 		<system>Hudson</system>
 	</ciManagement>
-	
-    <scm>
-        <connection>scm:git:git://github.com/uded/maven-remote-exec-plugin.git</connection>
-        <developerConnection>scm:svn:https://svn.radical.com.pl/maven2/maven-remote-exec-plugin/</developerConnection>
-        <tag>HEAD</tag>
-        <url>http://projekty.radical.com.pl/projects/maven-remote-exec/repository</url>
-    </scm>
 
-    <organization>
-        <name>Radical Creations</name>
-    </organization>
+	<scm>
+		<connection>scm:git:git://github.com/uded/maven-remote-exec-plugin.git</connection>
+		<developerConnection>scm:svn:https://svn.radical.com.pl/maven2/maven-remote-exec-plugin/</developerConnection>
+		<tag>HEAD</tag>
+		<url>http://projekty.radical.com.pl/projects/maven-remote-exec/repository</url>
+	</scm>
+
+	<organization>
+		<name>Radical Creations</name>
+	</organization>
 	<developers>
 		<developer>
 			<id>uded</id>
@@ -76,6 +76,15 @@
 
 			<plugin>
 				<artifactId>maven-plugin-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<locales>pl,en,fi</locales>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
