--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 	<build>
 		<plugins>
 			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>1.5</source>
@@ -75,13 +76,13 @@
 			</plugin>
 
 			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-plugin-plugin</artifactId>
 			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>2.1</version>
 				<configuration>
 					<locales>pl,en,fi</locales>
 				</configuration>
@@ -98,6 +99,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.6</version>
 			</plugin>
 		</plugins>
 	</reporting>
