--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<configuration>
-					<locales>pl,en,fi</locales>
+					<locales>pl,en</locales>
 				</configuration>
 			</plugin>
 		</plugins>
