--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>2.4.2</version>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-project-info-reports-plugin</artifactId>
+					<version>2.1.2</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
