Some pom modifications...
git-svn-id: http://svn.radical.com.pl/maven2/maven-remote-exec-plugin/trunk@2400 01953d5f-b815-0410-ab08-b360c6b68d4c

--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<configuration>
-					<locales>pl,en</locales>
+					<locales>en,pl</locales>
 				</configuration>
 			</plugin>
 		</plugins>
