Adding public repos for recognition
git-svn-id: http://svn.radical.com.pl/maven2/maven-remote-exec-plugin/trunk@2495 01953d5f-b815-0410-ab08-b360c6b68d4c

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,23 @@
 		<url>http://projekty.radical.com.pl/projects/maven-remote-exec/repository</url>
 	</scm>
 
+	<repositories>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>radical-public-releases</id>
+			<url>http://maven.radical.com.pl/releases/</url>
+		</repository>
+		<repository>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<id>radical-public-snapshots</id>
+			<url>http://maven.radical.com.pl/snapshots/</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
