Removing the connection to the parent POM
git-svn-id: http://svn.radical.com.pl/maven2/maven-remote-exec-plugin/trunk@2721 01953d5f-b815-0410-ab08-b360c6b68d4c

--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>pl.radical.mojos</groupId>
-		<artifactId>maven-plugins</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
-
-	<version>0.4-SNAPSHOT</version>
-
+	<groupId>pl.radical.mojos</groupId>
 	<artifactId>maven-remote-exec-plugin</artifactId>
+	<version>0.4-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 	<name>maven-remote-exec-plugin Maven Mojo</name>
 
@@ -33,22 +27,100 @@
 		<url>http://projekty.radical.com.pl/projects/maven-remote-exec/repository</url>
 	</scm>
 
+	<developers>
+		<developer>
+			<id>uded</id>
+			<name>Łukasz Rżanek</name>
+			<email>lukasz.rzanek@radical.com.pl</email>
+			<organization>Radical Creations</organization>
+			<timezone>CET</timezone>
+			<roles>
+				<role>Project owner</role>
+				<role>Lead developer</role>
+			</roles>
+		</developer>
+	</developers>
+
+	<licenses>
+		<license>
+			<name>LGPLv3</name>
+			<url>http://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<organization>
+		<name>Radical Creations</name>
+	</organization>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<inherited>true</inherited>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<inherited>true</inherited>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<inherited>true</inherited>
+			</plugin>
+		</plugins>
+	</reporting>
+
 	<repositories>
 		<repository>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
 			<id>radical-public-releases</id>
-			<url>http://maven.radical.com.pl/releases/</url>
+			<url>http://maven.radical.com.pl/releases</url>
 		</repository>
 		<repository>
 			<releases>
 				<enabled>false</enabled>
 			</releases>
 			<id>radical-public-snapshots</id>
-			<url>http://maven.radical.com.pl/snapshots/</url>
+			<url>http://maven.radical.com.pl/snapshots</url>
 		</repository>
 	</repositories>
+
+	<distributionManagement>
+		<repository>
+			<id>radical-releases</id>
+			<url>http://dev.radical.com.pl/maven/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>radical-snapshots</id>
+			<url>http://dev.radical.com.pl/maven/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
 	<dependencies>
 		<dependency>
