Updating the URL for distribution
git-svn-id: http://svn.radical.com.pl/maven2/maven-remote-exec-plugin/trunk@2729 01953d5f-b815-0410-ab08-b360c6b68d4c

--- a/pom.xml
+++ b/pom.xml
@@ -119,11 +119,11 @@
 	<distributionManagement>
 		<repository>
 			<id>radical-releases</id>
-			<url>http://dev.radical.com.pl/maven/content/repositories/releases</url>
+			<url>https://dev.radical.com.pl/maven/content/repositories/releases</url>
 		</repository>
 		<snapshotRepository>
 			<id>radical-snapshots</id>
-			<url>http://dev.radical.com.pl/maven/content/repositories/snapshots</url>
+			<url>https://dev.radical.com.pl/maven/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 
